Handling sockets in a silly way and serving silly client code

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "type": "git",
     "url": "https://github.com/bridgs/gamecarrot.git"
   },
+  "dependencies": {
+  },
   "keywords": [
     "multiplayer",
     "game",
