--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/bridgs/gamecarrot.git"
   },
   "dependencies": {
+    "browserify": "^10.1.3"
   },
   "keywords": [
     "multiplayer",
