--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "browserify": "^10.1.3",
+    "performance-now": "^0.2.0",
     "socket.io": "^1.3.5"
   },
   "keywords": [
